@@ -118,6 +118,11 @@ define pupmod::pass_two (
       }
     }
   }
+  if (defined(Class['pupmod::master'])) {
+    class { 'pupmod::master::simp_auth':
+      server_distribution => $_server_distribution
+    }
+  }
 
   if ($_server_distribution == 'PC1') {
     $shared_mode = '0640'
@@ -139,7 +144,6 @@ define pupmod::pass_two (
   }
 
   if ($_server_distribution == 'PE') {
-    # lint:ignore:variable_scope
     $pe_classlist.each |String $class, Hash $data| {
       if (defined(Class[$class])) {
         if ($data['configure_access'] == true) {
@@ -147,7 +151,6 @@ define pupmod::pass_two (
         }
       }
     }
-    # lint:endignore
   }
 
   # Generate firewall rules on a per-class basis.
